--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,9 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
             "name": "Launch Application",
-            "program": "${workspaceFolder}/main.js",
+            "program": "${workspaceFolder}/index.js",
             "request": "launch",
             "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
             "skipFiles": [
